// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-2.emotion-2 {
  margin-right: 8px;
}

.emotion-4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-4.emotion-4 {
  margin-right: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-4"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly useState function 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-2.emotion-2 {
  margin-right: 8px;
}

.emotion-4 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-4.emotion-4 {
  margin-right: 8px;
}

.emotion-20 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-20.emotion-20 {
  margin-right: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-4"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-20"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
<DocumentFragment>
  .emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-2 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-2.emotion-2 {
  margin-right: 8px;
}

.emotion-8 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  cursor: pointer;
}

.emotion-8.emotion-8 {
  margin-right: 8px;
}

.emotion-20 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: gray;
  cursor: pointer;
}

.emotion-20.emotion-20 {
  margin-right: 0;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-8"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-2"
    />
    <div
      class="emotion-1 emotion-20"
    />
  </div>
</DocumentFragment>
`;
